--- a/public/back/index.html
+++ b/public/back/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="./lib/nprogress/nprogress.css">
   <link rel="stylesheet" href="./css/commend.css">
   <link rel="stylesheet" href="./css/index.css">
-  <title>Document</title>
+  <title>乐淘网</title>
 </head>
 
 <body>
@@ -21,7 +21,7 @@
     </div>
     <div class="head">
       <img src="./images/123.png" alt="">
-      <p>超级管理员</p>
+      <p>林允儿</p>
     </div>
     <div class="foot">
       <ul>
