--- a/public/back/shop.html
+++ b/public/back/shop.html
@@ -21,7 +21,7 @@
     </div>
     <div class="head">
       <img src="./images/123.png" alt="">
-      <p>超级管理员</p>
+      <p>林允儿</p>
     </div>
     <div class="foot">
       <ul>
