--- a/public/back/first.html
+++ b/public/back/first.html
@@ -9,8 +9,8 @@
   <link rel="stylesheet" href="./lib/bootstrap-validator/css/bootstrapValidator.min.css">
   <link rel="stylesheet" href="./lib/nprogress/nprogress.css">
   <link rel="stylesheet" href="./css/commend.css">
-  <link rel="stylesheet" href="./css/index.css">
-  <title>Document</title>
+  <link rel="stylesheet" href="./css/first.css">
+  <title>乐淘网</title>
 </head>
 
 <body>
@@ -53,42 +53,107 @@
   <!-- 右侧 -->
   <div class="letao-right">
     <div class="lt-top">
-      <a href="#" class="pull-left lt-cai"><i class="glyphicon glyphicon-align-justify"></i></a>
-      <a href="#" class="pull-right lt-dan"><i class="glyphicon glyphicon-log-out"></i></a>
+      <a href="#" class="pull-left lt-cai">
+        <i class="glyphicon glyphicon-align-justify"></i>
+      </a>
+      <a href="#" class="pull-right lt-dan">
+        <i class="glyphicon glyphicon-log-out"></i>
+      </a>
     </div>
     <div class="container-fluid lt-center">
-        <ol class="breadcrumb">
-            <li><a href="index.html">管理系统</a></li>
-            <li class="">分类管理</li>
-            <li class="active">一级分类</li>
-          </ol>
+      <ol class="breadcrumb">
+        <li>
+          <a href="index.html">管理系统</a>
+        </li>
+        <li class="">分类管理</li>
+        <li class="active">一级分类</li>
+      </ol>
+      <button class="btn btn-default addbtn" style="margin-bottom: 20px">添加分类</button>
+      <table class="table table-bordered table-hover">
+        <thead>
+          <tr>
+            <th width="20%">序号</th>
+            <th width="80%">一级分类名</th>
+          </tr>
+        </thead>
+        <tbody>
+
+        </tbody>
+      </table>
+      <div class="text-right">
+        <ul id="pagintor"></ul>
+      </div>
     </div>
-    
+
   </div>
+  <!-- 模态框 -->
   <div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" id="meng">
-      <div class="modal-dialog modal-sm" role="document">
-        <div class="modal-content">
+    <div class="modal-dialog modal-sm" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+          <h4 class="modal-title">温馨提示</h4>
+        </div>
+        <div class="modal-body">
+          <p class="p">
+            <i class="glyphicon glyphicon-info-sign"></i>您确定要退出后台管理系统吗？</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+          <button type="button" class="btn btn-primary del">退出</button>
+        </div>
+      </div>
+      <!-- /.modal-content -->
+    </div>
+    <!-- /.modal-dialog -->
+  </div>
+  <!-- /.modal -->
+  <!-- 添加 -->
+  <div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" id="men">
+    <div class="modal-dialog modal-sm" role="document">
+      <div class="modal-content">
+        <form id="form">
           <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title">温馨提示</h4>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+            <h4 class="modal-title">添加分类</h4>
           </div>
           <div class="modal-body">
-            <p class="p"><i class="glyphicon glyphicon-info-sign"></i>您确定要退出后台管理系统吗？</p>
+            <div class="form-group">
+              <input type="text" name="categoryName" class="form-control" placeholder="请输入一级分类">
+            </div>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-            <button type="button" class="btn btn-primary del">退出</button>
+            <button type="submit" class="btn btn-primary add">添加</button>
           </div>
-        </div><!-- /.modal-content -->
-      </div><!-- /.modal-dialog -->
-    </div><!-- /.modal -->
+        </form>
+      </div>
+      <!-- /.modal-content -->
+    </div>
+    <!-- /.modal-dialog -->
+  </div>
+  <!-- /.modal -->
 
 </body>
+<script type="text/html" id="tpl">
+  {{each rows v i}}
+  <tr>
+    <td>{{i+1+(page-1)*size}}</td>
+    <td>{{v.categoryName}}</td>
+  </tr>
+  {{/each}}
+</script>
 <script src="./lib/jquery/jquery.min.js"></script>
 <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
 <script src="./lib/nprogress/nprogress.js"></script>
 <script src="./lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
+<script src="./lib/artTemplate/template-web.js"></script>
+<script src="./lib/bootstrap-paginator/bootstrap-paginator.min.js"></script>
 <script src="./js/comment.js"></script>
-<script src="./js/index.js"></script>
+<script src="./js/first.js"></script>
 
 </html>
