--- a/public/back/second.html
+++ b/public/back/second.html
@@ -9,8 +9,8 @@
   <link rel="stylesheet" href="./lib/bootstrap-validator/css/bootstrapValidator.min.css">
   <link rel="stylesheet" href="./lib/nprogress/nprogress.css">
   <link rel="stylesheet" href="./css/commend.css">
-  <link rel="stylesheet" href="./css/index.css">
-  <title>Document</title>
+  <link rel="stylesheet" href="./css/second.css">
+  <title>乐淘网</title>
 </head>
 
 <body>
@@ -53,42 +53,135 @@
   <!-- 右侧 -->
   <div class="letao-right">
     <div class="lt-top">
-      <a href="#" class="pull-left lt-cai"><i class="glyphicon glyphicon-align-justify"></i></a>
-      <a href="#" class="pull-right lt-dan"><i class="glyphicon glyphicon-log-out"></i></a>
+      <a href="#" class="pull-left lt-cai">
+        <i class="glyphicon glyphicon-align-justify"></i>
+      </a>
+      <a href="#" class="pull-right lt-dan">
+        <i class="glyphicon glyphicon-log-out"></i>
+      </a>
     </div>
     <div class="container-fluid lt-center">
-        <ol class="breadcrumb">
-            <li><a href="index.html">管理系统</a></li>
-            <li class="">分类管理</li>
-            <li class="active">二级分类</li>
-          </ol>
+      <ol class="breadcrumb">
+        <li>
+          <a href="index.html">管理系统</a>
+        </li>
+        <li class="">分类管理</li>
+        <li class="active">二级分类</li>
+      </ol>
+      <button class="btn btn-default addbtn" style="margin-bottom: 20px">添加分类</button>
+      <table class="table table-bordered table-hover">
+        <thead>
+          <tr>
+            <th>序号</th>
+            <th>一级分类名称</th>
+            <th>二级分类名称</th>
+            <th>二级分类LOGO</th>
+          </tr>
+        </thead>
+        <tbody>
+
+        </tbody>
+      </table>
+      <div class="text-right">
+        <ul id="pagintor"></ul>
+      </div>
     </div>
-    
+
   </div>
   <div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" id="meng">
-      <div class="modal-dialog modal-sm" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title">温馨提示</h4>
-          </div>
-          <div class="modal-body">
-            <p class="p"><i class="glyphicon glyphicon-info-sign"></i>您确定要退出后台管理系统吗？</p>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-            <button type="button" class="btn btn-primary del">退出</button>
-          </div>
-        </div><!-- /.modal-content -->
-      </div><!-- /.modal-dialog -->
-    </div><!-- /.modal -->
+    <div class="modal-dialog modal-sm" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+          <h4 class="modal-title">温馨提示</h4>
+        </div>
+        <div class="modal-body">
+          <p class="p">
+            <i class="glyphicon glyphicon-info-sign"></i>您确定要退出后台管理系统吗？</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+          <button type="button" class="btn btn-primary del">退出</button>
+        </div>
+      </div>
+      <!-- /.modal-content -->
+    </div>
+    <!-- /.modal-dialog -->
+  </div>
+
+  <!-- 模态框 -->
+  <div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" id="men">
+    <div class="modal-dialog modal-sm" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+          <h4 class="modal-title">添加分类</h4>
+        </div>
+        <div class="modal-body">
+          <form>
+            <div class="form-group">
+              <div class="btn-group">
+                <button class="btn btn-default btn-md dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <span id="dropdownText">请选择一级分类</span>
+                  <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu">
+                
+                </ul>
+              </div>
+            </div>
+            <div class="form-group">
+              <input type="text" class="form-control" id="exampleInputPassword1" placeholder="请输入二级分类">
+            </div>
+            <div class="form-group">
+              <label class="btn btn-default" for="fileupload">上传图片</label>
+              <input type="file" id="fileupload" name="pic1" data-url="/category/addSecondCategoryPic" style="display: none">
+            </div>
+            <div class="form-group" id="imgBox">
+              <img src="./images/none.png" width="100" alt="">
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+          <button type="submit" class="btn btn-primary insert">添加</button>
+        </div>
+      </div>
+      <!-- /.modal-content -->
+    </div>
+    <!-- /.modal-dialog -->
+  </div>
+  <!-- /.modal -->
 
 </body>
+<script type="text/html" id="rendertpl">
+  {{each rows v i}}
+  <tr>
+      <td>{{i+1+(page-1)*size}}</td>
+      <td>{{v.categoryName}}</td>
+      <td>{{v.brandName}}</td>
+      <td><img src="{{v.brandLogo}}" height="50" width="50" alt=""></td>
+    </tr>
+    {{/each}}
+</script>
+<script type="text/html" id="addtpl">
+  {{each rows v i}}
+  <li><a href="#">{{v.categoryName}}</a></li>
+  {{/each}}
+</script>
 <script src="./lib/jquery/jquery.min.js"></script>
 <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
 <script src="./lib/nprogress/nprogress.js"></script>
 <script src="./lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
+<script src="./lib/artTemplate/template-web.js"></script>
+<script src="./lib/bootstrap-paginator/bootstrap-paginator.min.js"></script>
+<script src="./lib/jquery-fileupload/jquery.ui.widget.js"></script>
+<script src="./lib/jquery-fileupload/jquery.fileupload.js"></script>
 <script src="./js/comment.js"></script>
-<script src="./js/index.js"></script>
+<script src="./js/second.js"></script>
 
 </html>
