--- a/public/back/user.html
+++ b/public/back/user.html
@@ -117,6 +117,28 @@
     </div>
     <!-- /.modal-dialog -->
   </div>
+  <div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" id="meng1">
+      <div class="modal-dialog modal-sm" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+            <h4 class="modal-title">温馨提示</h4>
+          </div>
+          <div class="modal-body">
+            <p class="p">
+              <i class="glyphicon glyphicon-info-sign"></i>你确定要执行此操作吗？</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+            <button type="button" class="btn btn-primary dell">确定</button>
+          </div>
+        </div>
+        <!-- /.modal-content -->
+      </div>
+      <!-- /.modal-dialog -->
+    </div>
   <!-- /.modal -->
 
 </body>
@@ -127,7 +149,7 @@
     <td>{{v.username}}</td>
     <td>{{v.mobile}}</td>
     <td>{{v.isDelete===1?"正常":"禁用"}}</td>
-    <td>
+    <td data-id="{{v.id}}">
       {{if v.isDelete===1}}
       <button class="btn btn-danger">禁用</button>
       {{else}}
