--- a/public/back2/first.html
+++ b/public/back2/first.html
@@ -61,6 +61,29 @@
       <li class="active">一级分类</li>
     </ol>
 
+
+    <div class="lt_content">
+
+      <button class="btn btn-default" id="addBtn">添加分类</button>
+
+      <table class="table table-bordered table-hover mt_20">
+        <thead>
+          <tr>
+            <th width="20%">序号</th>
+            <th width="80%">一级分类名</th>
+          </tr>
+        </thead>
+        <tbody>
+          <!-- 挖个坑 -->
+        </tbody>
+      </table>
+
+      <div class="text-right">
+        <ul id="paginator"></ul>
+      </div>
+
+    </div>
+
   </div>
 
 </div>
@@ -95,6 +118,43 @@
 
 
 
+<!-- 添加模态框 -->
+<div class="modal fade" tabindex="-1" id="addModal">
+
+  <!-- 模态框结构 -->
+  <div class="modal-dialog modal-sm">
+    <div class="modal-content">
+      <form id="form">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
+          <h4 class="modal-title">添加分类</h4>
+        </div>
+        <div class="modal-body">
+          <div class="form-group">
+            <input type="text"  name="categoryName" class="form-control" placeholder="请输入一级分类">
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+          <button type="submit" class="btn btn-primary">添加</button>
+        </div>
+      </form>
+    </div>
+  </div>
+
+</div>
+
+
+<script type="text/html" id="firstTpl">
+  {{ each rows v i }}
+    <tr>
+      <!-- 当前页的个数 + 前面的页数 * 每页条数 -->
+      <td>{{ i + 1 + (page - 1)*size }}</td>
+      <td>{{ v.categoryName }}</td>
+    </tr>
+  {{ /each }}
+</script>
+
 
 
 
@@ -102,7 +162,10 @@
 <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
 <script src="./lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
 <script src="./lib/nprogress/nprogress.js"></script>
+<script src="./lib/artTemplate/template-web.js"></script>
+<script src="./lib/bootstrap-paginator/bootstrap-paginator.min.js"></script>
 <script src="js/common.js"></script>
+<script src="js/first.js"></script>
 
 </body>
 </html>
