--- a/public/back/shop.html
+++ b/public/back/shop.html
@@ -9,8 +9,8 @@
   <link rel="stylesheet" href="./lib/bootstrap-validator/css/bootstrapValidator.min.css">
   <link rel="stylesheet" href="./lib/nprogress/nprogress.css">
   <link rel="stylesheet" href="./css/commend.css">
-  <link rel="stylesheet" href="./css/index.css">
-  <title>Document</title>
+  <link rel="stylesheet" href="./css/shop.css">
+  <title>乐淘网</title>
 </head>
 
 <body>
@@ -53,41 +53,168 @@
   <!-- 右侧 -->
   <div class="letao-right">
     <div class="lt-top">
-      <a href="#" class="pull-left lt-cai"><i class="glyphicon glyphicon-align-justify"></i></a>
-      <a href="#" class="pull-right lt-dan"><i class="glyphicon glyphicon-log-out"></i></a>
+      <a href="#" class="pull-left lt-cai">
+        <i class="glyphicon glyphicon-align-justify"></i>
+      </a>
+      <a href="#" class="pull-right lt-dan">
+        <i class="glyphicon glyphicon-log-out"></i>
+      </a>
     </div>
     <div class="container-fluid lt-center">
-        <ol class="breadcrumb">
-            <li><a href="index.html">管理系统</a></li>
-            <li class="active">商品管理</li>
-          </ol>
+      <ol class="breadcrumb">
+        <li>
+          <a href="index.html">管理系统</a>
+        </li>
+        <li class="active">商品管理</li>
+      </ol>
+      <button class="btn btn-default addbtn" style="margin-bottom: 20px">添加商品</button>
+      <table class="table table-bordered table-hover">
+        <thead>
+          <tr>
+            <th width="10%">序号</th>
+            <th width="25%">商品名称</th>
+            <th width="25%">商品描述</th>
+            <th width="10%">商品库存</th>
+            <th width="10%">商品尺寸</th>
+            <th width="10%">商品状态</th>
+            <th width="10%">操作</th>
+          </tr>
+        </thead>
+        <tbody>
+
+        </tbody>
+      </table>
+      <div class="text-right">
+        <ul id="pagintor"></ul>
+      </div>
     </div>
-    
+
   </div>
   <div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" id="meng">
-      <div class="modal-dialog modal-sm" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title">温馨提示</h4>
-          </div>
-          <div class="modal-body">
-            <p class="p"><i class="glyphicon glyphicon-info-sign"></i>您确定要退出后台管理系统吗？</p>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-            <button type="button" class="btn btn-primary del">退出</button>
-          </div>
-        </div><!-- /.modal-content -->
-      </div><!-- /.modal-dialog -->
-    </div><!-- /.modal -->
+    <div class="modal-dialog modal-sm" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+          <h4 class="modal-title">温馨提示</h4>
+        </div>
+        <div class="modal-body">
+          <p class="p">
+            <i class="glyphicon glyphicon-info-sign"></i>您确定要退出后台管理系统吗？</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+          <button type="button" class="btn btn-primary del">退出</button>
+        </div>
+      </div>
+      <!-- /.modal-content -->
+    </div>
+    <!-- /.modal-dialog -->
+  </div>
+
+  <!-- 添加的模态框 -->
+  <div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" id="men">
+    <div class="modal-dialog modal-lg" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+          <h4 class="modal-title">添加商品</h4>
+        </div>
+        <div class="modal-body">
+          <form id="form">
+            <div class="form-group">
+              <div class="btn-group">
+                <button class="btn btn-default btn-md dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <span id="dropdownText">请选择二级分类</span>
+                  <span class="caret"></span>
+                </button>
+
+                <ul class="dropdown-menu">
+
+                </ul>
+              </div>
+              <input type="hidden" name="brandId">
+              <input type="hidden" name="statu" value="1">
+            </div>
+
+            <div class="form-group">
+              <input type="hidden" name="hot" id="" value="1">
+              <input type="text" class="form-control" name="proName" id="exampleInputPassword1" placeholder="请输入商品个名称">
+            </div>
+            <div class="form-group">
+              <textarea class="form-control" rows="3" placeholder="请输入商品描述" name="proDesc"></textarea>
+            </div>
+            <div class="form-group">
+              <input type="text" class="form-control" name="num" id="exampleInputPassword1" placeholder="请输入商品个库存">
+            </div>
+            <div class="form-group">
+              <input type="text" class="form-control" name="size" id="exampleInputPassword1" placeholder="请输入商品个尺码">
+            </div>
+            <div class="form-group">
+              <input type="text" class="form-control" name="oldPrice" id="exampleInputPassword1" placeholder="请输入商品个原价">
+            </div>
+            <div class="form-group">
+              <input type="text" class="form-control" name="price" id="exampleInputPassword1" placeholder="请输入商品个现价">
+            </div>
+            <div class="form-group">
+              <label class="btn btn-default" for="fileupload">上传图片</label>
+              <input type="file" id="fileupload" name="pic1" multiple data-url="/product/addProductPic" style="display: none">
+            </div>
+            <div class="form-group" id="imgBox">
+              <!-- <img src="./images/none.png" width="100" alt=""> -->
+              <!-- <input type="hidden" name="brandLogo"> -->
+              <input type="hidden" name="image">
+            </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+          <button type="submit" class="btn btn-primary insert">添加</button>
+        </div>
+        </form>
+
+      </div>
+      <!-- /.modal-content -->
+    </div>
+    <!-- /.modal-dialog -->
+  </div>
+  <!-- /.modal -->
 
 </body>
+<script type="text/html" id="rendertpl">
+  {{each rows v i}}
+  <tr>
+    <td>{{i+1+(page-1)*size}}</td>
+    <td>{{v.proName}}</td>
+    <td>{{v.proDesc}}</td>
+    <td>{{v.num}}</td>
+    <td>{{v.size}}</td>
+    <td>{{v.statu===1?"已上架":"已下架"}}</td>
+    {{if v.statu===1}}
+    <td><button class="btn btn-danger">下架</button></td>
+    {{else}}
+    <td><button class="btn btn-success">上架</button></td>
+    {{/if}}
+  </tr>
+  {{/each}}
+</script>
+
+<script type="text/html" id="addhtml">
+{{each rows v i}}
+<li><a href="#" data-id="{{v.id}}">{{v.brandName}}</a></li>
+{{/each}}k
+</script>
 <script src="./lib/jquery/jquery.min.js"></script>
 <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
 <script src="./lib/nprogress/nprogress.js"></script>
 <script src="./lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
+<script src="./lib/bootstrap-paginator/bootstrap-paginator.min.js"></script>
+<script src="./lib/artTemplate/template-web.js"></script>
+<script src="./lib/jquery-fileupload/jquery.ui.widget.js"></script>
+<script src="./lib/jquery-fileupload/jquery.fileupload.js"></script>
 <script src="./js/comment.js"></script>
-<script src="./js/index.js"></script>
+<script src="./js/shop.js"></script>
 
 </html>
